--- a/part4/blogilista/package.json
+++ b/part4/blogilista/package.json
@@ -11,13 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
     "cross-env": "^7.0.3",
     "jest": "^28.1.2",
     "nodemon": "^2.0.19",
